fix: benchmark desc wrap

--- a/src/benchmark/index.module.scss
+++ b/src/benchmark/index.module.scss
@@ -41,7 +41,7 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  margin: 1.25rem;
+  padding: 1.25rem;
 }
 
 .metricItem {
